--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"react-p5": "^1.3.2",
 		"react-particles-js": "^3.2.1",
 		"react-router-dom": "^5.2.0",
-		"react-scripts": "3.4.1"
+		"react-scripts": "3.4.1",
+		"styled-components": "^5.1.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
