--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   },
   "dependencies": {
     "gatsby": "^2.24.47",
+    "gatsby-plugin-react-helmet": "^3.3.12",
     "gatsby-plugin-sass": "^2.3.12",
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-device-detect": "^1.13.1",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "react-particles-js": "^3.3.0"
   },
   "devDependencies": {
