--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,7 @@
 {
-  "arrowParens": "avoid",
-  "semi": false,
   "trailingComma": "none",
   "tabWidth": 4,
+  "semi": true,
   "singleQuote": true,
   "jsxBracketSameLine": false,
   "printWidth": 125,
