--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Deploy Master Branch
 on:
     push:
         branches:
-            - master
+            - source
 jobs:
     build:
         name: Build Gatsby Site
