--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
             - source
 jobs:
     build:
-        name: Build Gatsby Site
+        name: Build Svelte Site
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
