--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "node-sass": "^5.0.0",
+    "rollup-plugin-uglify": "^6.0.4",
     "sirv-cli": "^1.0.0",
     "svelte-particles": "^1.1.11",
     "svelte-preprocess": "^4.6.1"
