--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
 	"devDependencies": {
 		"@rollup/plugin-commonjs": "^16.0.0",
 		"@rollup/plugin-node-resolve": "^10.0.0",
+		"copy-to-clipboard": "^3.3.1",
 		"postcss": "^8.2.6",
 		"rollup": "^2.3.4",
-		"rollup-plugin-css-only": "^3.1.0",
 		"rollup-plugin-livereload": "^2.0.0",
 		"rollup-plugin-postcss": "^4.0.0",
 		"rollup-plugin-svelte": "^7.0.0",
 		"rollup-plugin-terser": "^7.0.0",
-		"svelte-preprocess": "^4.6.1",
-		"svelte": "^3.0.0"
+		"svelte": "^3.0.0",
+		"svelte-particles": "^1.1.11",
+		"sass": "^1.32.8",
+		"svelte-preprocess": "^4.6.1"
 	},
 	"dependencies": {
-		"node-sass": "^5.0.0",
-		"sirv-cli": "^1.0.0",
-		"svelte-particles": "^1.1.11"
+		"sirv-cli": "^1.0.0"
 	}
 }
