--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
 		"rollup-plugin-postcss": "^4.0.0",
 		"rollup-plugin-svelte": "^7.0.0",
 		"rollup-plugin-terser": "^7.0.0",
+		"sass": "^1.32.8",
 		"svelte": "^3.0.0",
 		"svelte-particles": "^1.1.11",
-		"sass": "^1.32.8",
 		"svelte-preprocess": "^4.6.1"
 	},
 	"dependencies": {
-		"sirv-cli": "^1.0.0"
+		"sirv-cli": "^1.0.0",
+		"svelte-device-detector": "^0.2.2"
 	}
 }
