--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
-	"name": "svelte-app",
-	"version": "1.0.0",
+	"name": "homepage",
+	"version": "3.0.1",
 	"scripts": {
-		"build": "rollup -c",
-		"dev": "rollup -c -w",
-		"start": "sirv public"
+		"dev": "svelte-kit dev",
+		"build": "svelte-kit build",
+		"preview": "svelte-kit preview",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --check --plugin-search-dir=. .",
+		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@rollup/plugin-commonjs": "^16.0.0",
-		"@rollup/plugin-node-resolve": "^10.0.0",
+		"@sveltejs/kit": "next",
+		"@types/cookie": "^0.4.0",
+		"prettier": "^2.3.1",
+		"prettier-plugin-svelte": "^2.2.0",
+		"svelte": "^3.34.0",
+		"svelte-check": "^2.0.0",
+		"svelte-preprocess": "^4.0.0",
+		"tslib": "^2.0.0",
+		"typescript": "^4.0.0",
+		"svelte-device-detector": "^0.2.2",
 		"copy-to-clipboard": "^3.3.1",
-		"postcss": "^8.2.15",
-		"rollup": "^2.3.4",
-		"rollup-plugin-livereload": "^2.0.0",
-		"rollup-plugin-postcss": "^4.0.0",
-		"rollup-plugin-svelte": "^7.0.0",
-		"rollup-plugin-terser": "^7.0.0",
-		"sass": "^1.32.8",
-		"svelte": "^3.0.0",
-		"svelte-particles": "^1.1.11",
-		"svelte-preprocess": "^4.6.1"
+		"svelte-particles": "^1.12.2",
+		"sass": "^1.32.8"
 	},
+	"type": "module",
 	"dependencies": {
-		"sirv-cli": "^1.0.0",
 		"svelte-device-detector": "^0.2.2"
 	}
 }
