--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@sveltejs/adapter-static": "^1.0.0-next.13",
 		"@sveltejs/kit": "next",
 		"@types/cookie": "^0.4.0",
+		"copy-to-clipboard": "^3.3.1",
 		"prettier": "^2.3.1",
 		"prettier-plugin-svelte": "^2.2.0",
+		"sass": "^1.32.8",
 		"svelte": "^3.34.0",
 		"svelte-check": "^2.0.0",
+		"svelte-device-detector": "^0.2.2",
+		"svelte-particles": "^1.12.2",
 		"svelte-preprocess": "^4.0.0",
 		"tslib": "^2.0.0",
-		"typescript": "^4.0.0",
-		"svelte-device-detector": "^0.2.2",
-		"copy-to-clipboard": "^3.3.1",
-		"svelte-particles": "^1.12.2",
-		"sass": "^1.32.8"
+		"typescript": "^4.0.0"
 	},
 	"type": "module",
 	"dependencies": {
