--- a/package.json
+++ b/package.json
@@ -17,10 +17,7 @@
 		"sass": "^1.32.8",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.0.0",
-		"svelte-particles": "^1.12.2",
-		"svelte-preprocess": "^4.0.0",
-		"tslib": "^2.0.0",
-		"typescript": "^4.0.0"
+		"svelte-preprocess": "^4.0.0"
 	},
 	"type": "module"
 }
