--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,18 +6,17 @@ on:
 
 jobs:
     build:
-        name: Build Svelte Site
+        name: Build Homesite
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-            - name: Use Node.js
-              uses: actions/setup-node@v1
+            - name: Setting up pnpm
+              uses: pnpm/action-setup@v2.0.1
               with:
-                  node-version: '16.x'
-            - name: Install dependencies
-              run: yarn
-            - name: Build
-              run: yarn build
+                  version: 6.0.2
+                  run_install: true
+            - name: Building Project
+              run: pnpm build
             - name: Deploy
               uses: peaceiris/actions-gh-pages@v3
               with:
