--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
 		"preview": "svelte-kit preview",
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
+	"dependencies": {
+		"@emotion/css": "^11.7.1"
+	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^1.0.0-next.13",
 		"@sveltejs/kit": "next",
