--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "homepage",
-	"version": "3.0.1",
+	"version": "3.0.2",
 	"scripts": {
 		"start": "svelte-kit dev",
 		"build": "svelte-kit build",
@@ -8,7 +8,8 @@
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"dependencies": {
-		"@emotion/css": "^11.7.1"
+		"@emotion/css": "^11.7.1",
+		"classnames": "^2.3.1"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^1.0.0-next.13",
