--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/kit": "next",
 		"@types/cookie": "^0.4.0",
 		"copy-to-clipboard": "^3.3.1",
+		"pnpm": "^7.1.0",
 		"prettier": "^2.3.1",
 		"prettier-plugin-svelte": "^2.2.0",
 		"sass": "^1.32.8",
