--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"classnames": "^2.3.1"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "^1.0.0-next.13",
+		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@types/cookie": "^0.4.0",
 		"copy-to-clipboard": "^3.3.1",
@@ -22,7 +22,6 @@
 		"prettier-plugin-svelte": "^2.2.0",
 		"sass": "^1.32.8",
 		"svelte": "^3.44.0",
-		"svelte-check": "^2.0.0",
 		"svelte-preprocess": "^4.0.0"
 	},
 	"type": "module"
