--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
 	"dependencies": {
 		"@emotion/css": "^11.7.1",
 		"classnames": "^2.3.1",
+		"copy-to-clipboard": "^3.3.1",
 		"sass": "^1.32.8",
-		"svelte": "^3.44.0",
-		"copy-to-clipboard": "^3.3.1"
+		"svelte": "^3.44.0"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-cloudflare": "^1.0.0-next.19",
 		"@sveltejs/kit": "next",
 		"@types/cookie": "^0.4.0",
 		"pnpm": "^7.1.0",
