--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
 		"svelte": "^3.44.0"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-cloudflare": "^1.0.0-next.19",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "1.0.0-next.330",
 		"@types/cookie": "^0.4.0",
 		"pnpm": "^7.1.0",
 		"prettier": "^2.3.1",
