--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"svelte": "^3.44.0"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-cloudflare": "^1.0.0-next.19",
+		"@sveltejs/adapter-static": "^1.0.0-next.30",
 		"@sveltejs/kit": "1.0.0-next.330",
 		"@types/cookie": "^0.4.0",
 		"pnpm": "^7.1.0",
