--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
 		"@sveltejs/adapter-static": "^1.0.0-next.30",
 		"@sveltejs/kit": "1.0.0-next.330",
 		"@types/cookie": "^0.4.0",
+		"autoprefixer": "^10.4.7",
 		"pnpm": "^7.1.0",
+		"postcss": "^8.4.14",
 		"prettier": "^2.3.1",
 		"prettier-plugin-svelte": "^2.2.0",
-		"svelte-preprocess": "^4.0.0"
+		"svelte-preprocess": "^4.0.0",
+		"tailwindcss": "^3.0.24"
 	},
 	"type": "module"
 }
