--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
 	"name": "homepage",
-	"version": "3.0.2",
+	"version": "0.0.1",
 	"scripts": {
-		"start": "svelte-kit dev",
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"preview": "svelte-kit preview",
+		"dev": "vite dev",
+		"build": "vite build",
+		"package": "svelte-kit package",
+		"preview": "vite preview",
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
-	"dependencies": {
-		"@emotion/css": "^11.7.1",
-		"classnames": "^2.3.1",
-		"copy-to-clipboard": "^3.3.1",
-		"sass": "^1.32.8",
-		"svelte": "^3.44.0"
-	},
 	"devDependencies": {
-		"@sveltejs/adapter-static": "^1.0.0-next.30",
-		"@sveltejs/kit": "1.0.0-next.330",
-		"@types/cookie": "^0.4.0",
-		"autoprefixer": "^10.4.7",
-		"pnpm": "^7.1.0",
-		"postcss": "^8.4.14",
-		"prettier": "^2.3.1",
-		"prettier-plugin-svelte": "^2.2.0",
-		"svelte-preprocess": "^4.0.0",
-		"tailwindcss": "^3.0.24"
+		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-static": "1.0.0-next.39",
+		"@sveltejs/kit": "next",
+		"@types/html-minifier": "^4.0.2",
+		"autoprefixer": "^10.4.8",
+		"copy-to-clipboard": "^3.3.2",
+		"html-minifier": "^4.0.0",
+		"pnpm": "^7.9.3",
+		"postcss": "^8.4.16",
+		"prettier": "^2.6.2",
+		"prettier-plugin-svelte": "^2.7.0",
+		"svelte": "^3.44.0",
+		"svelte-check": "^2.7.1",
+		"svelte-preprocess": "^4.10.7",
+		"tailwindcss": "^3.1.8",
+		"tslib": "^2.3.1",
+		"typescript": "^4.7.4",
+		"vite": "^3.0.0"
 	},
 	"type": "module"
 }
