feat: added tailwind prettier plugin

--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
 		"@sveltejs/kit": "next",
 		"@types/html-minifier": "^4.0.2",
 		"autoprefixer": "^10.4.8",
+		"classnames": "^2.3.2",
 		"copy-to-clipboard": "^3.3.2",
 		"html-minifier": "^4.0.0",
 		"pnpm": "^7.9.3",
 		"postcss": "^8.4.16",
 		"prettier": "^2.6.2",
-		"prettier-plugin-svelte": "^2.7.0",
+		"prettier-plugin-tailwindcss": "^0.1.13",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.7",
