--- a/package.json
+++ b/package.json
@@ -10,6 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.0.18"
+    "@astrojs/svelte": "^2.1.0",
+    "@astrojs/tailwind": "^3.1.0",
+    "astro": "^2.1.2",
+    "classnames": "^2.3.2",
+    "copy-to-clipboard": "^3.3.3",
+    "svelte": "^3.54.0",
+    "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "prettier-plugin-astro": "^0.8.0",
+    "prettier-plugin-svelte": "^2.9.0",
+    "prettier-plugin-tailwindcss": "^0.2.4"
   }
 }
