--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/svelte": "^2.1.0",
     "@astrojs/tailwind": "^3.1.0",
+    "@astrojs/vercel": "^3.2.0",
     "astro": "^2.1.2",
     "classnames": "^2.3.2",
     "copy-to-clipboard": "^3.3.3",
