--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "website",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,18 +10,20 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/svelte": "^2.1.0",
-    "@astrojs/tailwind": "^3.1.0",
-    "@astrojs/vercel": "^3.2.0",
-    "astro": "^2.1.2",
+    "@astrojs/svelte": "^5.4.0",
+    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.5.3",
+    "astro": "^4.6.2",
     "classnames": "^2.3.2",
     "copy-to-clipboard": "^3.3.3",
-    "svelte": "^3.54.0",
-    "tailwindcss": "^3.0.24"
+    "svelte": "5.0.0-next.106",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "prettier-plugin-astro": "^0.8.0",
-    "prettier-plugin-svelte": "^2.9.0",
-    "prettier-plugin-tailwindcss": "^0.2.4"
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0",
+    "prettier-plugin-svelte": "^3.2.3",
+    "prettier-plugin-tailwindcss": "^0.5.14"
   }
 }
