--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^3.0.1",
+    "@astrojs/prefetch": "^0.4.1",
     "@astrojs/svelte": "^5.4.0",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.6.0",
     "astro": "^4.9.1",
+    "astro-diagram": "^0.7.0",
     "classnames": "^2.3.2",
     "copy-to-clipboard": "^3.3.3",
+    "rehype-katex": "^7.0.0",
+    "remark-math": "^6.0.0",
     "svelte": "5.0.0-next.106",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.3.3"
