--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "website",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/mdx": "^3.0.1",
-    "@astrojs/prefetch": "^0.4.1",
-    "@astrojs/svelte": "^5.4.0",
-    "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.6.0",
-    "astro": "^4.9.1",
-    "astro-diagram": "^0.7.0",
-    "classnames": "^2.3.2",
-    "copy-to-clipboard": "^3.3.3",
-    "rehype-katex": "^7.0.0",
-    "remark-math": "^6.0.0",
-    "svelte": "5.0.0-next.106",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.3.3"
-  },
-  "devDependencies": {
-    "prettier": "^3.2.5",
-    "prettier-plugin-astro": "^0.13.0",
-    "prettier-plugin-svelte": "^3.2.3",
-    "prettier-plugin-tailwindcss": "^0.5.14"
-  }
+    "name": "website",
+    "type": "module",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "astro dev",
+        "start": "astro dev",
+        "build": "astro build",
+        "preview": "astro preview",
+        "astro": "astro"
+    },
+    "dependencies": {
+        "@astrojs/mdx": "^3.0.1",
+        "@astrojs/prefetch": "^0.4.1",
+        "@astrojs/svelte": "^5.4.0",
+        "@astrojs/tailwind": "^5.1.0",
+        "@astrojs/vercel": "^7.6.0",
+        "astro": "^4.9.1",
+        "astro-diagram": "^0.7.0",
+        "classnames": "^2.3.2",
+        "copy-to-clipboard": "^3.3.3",
+        "rehype-katex": "^7.0.0",
+        "remark-math": "^6.0.0",
+        "svelte": "4",
+        "tailwindcss": "^3.4.3",
+        "typescript": "^5.3.3"
+    },
+    "devDependencies": {
+        "prettier": "^3.2.5",
+        "prettier-plugin-astro": "^0.13.0",
+        "prettier-plugin-svelte": "^3.2.3",
+        "prettier-plugin-tailwindcss": "^0.5.14"
+    }
 }
