--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
         "astro": "astro"
     },
     "dependencies": {
+        "@astrojs/alpinejs": "^0.4.0",
         "@astrojs/mdx": "^3.0.1",
         "@astrojs/svelte": "^5.4.0",
         "@astrojs/tailwind": "^5.1.0",
         "@astrojs/vercel": "^7.6.0",
+        "@types/alpinejs": "^3.13.10",
+        "alpinejs": "^3.14.0",
         "astro": "^4.9.1",
         "astro-diagram": "^0.7.0",
         "classnames": "^2.3.2",
