--- a/package.json
+++ b/package.json
@@ -10,20 +10,18 @@
         "astro": "astro"
     },
     "dependencies": {
-        "@astrojs/alpinejs": "^0.4.0",
         "@astrojs/mdx": "^3.0.1",
-        "@astrojs/svelte": "^5.4.0",
+        "@astrojs/svelte": "^5.6.0",
         "@astrojs/tailwind": "^5.1.0",
         "@astrojs/vercel": "^7.6.0",
-        "@types/alpinejs": "^3.13.10",
-        "alpinejs": "^3.14.0",
         "astro": "^4.9.1",
         "astro-diagram": "^0.7.0",
         "classnames": "^2.3.2",
         "copy-to-clipboard": "^3.3.3",
+        "nanostores": "^0.10.3",
         "rehype-katex": "^7.0.0",
         "remark-math": "^6.0.0",
-        "svelte": "4",
+        "svelte": "^4.2.18",
         "tailwindcss": "^3.4.3",
         "typescript": "^5.3.3"
     },
@@ -31,6 +29,6 @@
         "prettier": "^3.2.5",
         "prettier-plugin-astro": "^0.13.0",
         "prettier-plugin-svelte": "^3.2.3",
-        "prettier-plugin-tailwindcss": "^0.5.14"
+        "prettier-plugin-tailwindcss": "^0.6.5"
     }
 }
