--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
     "extends": "astro/tsconfigs/strictest",
     "compilerOptions": {
-        "baseUrl": "src",
+        "baseUrl": ".",
         "paths": {
-            "@components/*": ["components/*"]
+            "@components/*": ["src/components/*"],
+            "@layouts/*": ["src/layouts/*"]
         }
     }
 }
