--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "remark-math": "^6.0.0",
         "svelte": "^4.2.18",
         "tailwindcss": "^3.4.3",
+        "theme-change": "^2.5.0",
         "typescript": "^5.3.3"
     },
     "devDependencies": {
