feat: added week 1 notes, and chart rendering

--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
         "@astrojs/svelte": "^5.7.1",
         "@astrojs/tailwind": "^5.1.1",
         "astro": "^4.15.10",
-        "astro-diagram": "^0.7.0",
         "classnames": "^2.3.2",
         "copy-to-clipboard": "^3.3.3",
         "nanostores": "^0.10.3",
+        "playwright": "^1.48.0",
         "rehype-katex": "^7.0.0",
+        "rehype-mermaid": "^3.0.0",
         "remark-math": "^6.0.0",
+        "remark-mermaid": "^0.2.0",
+        "remark-mermaidjs": "^7.0.0",
         "svelte": "^4.2.18",
         "tailwindcss": "^3.4.3",
         "theme-change": "^2.5.0",
